[Lakshya]Add.Added Problem 9

--- a/io-programming-practice/gcr-codebase/json-data/pom.xml
+++ b/io-programming-practice/gcr-codebase/json-data/pom.xml
@@ -17,11 +17,19 @@
             <artifactId>json</artifactId>
             <version>20240303</version>
         </dependency>
+        <!-- Everit JSON Schema -->
+        <dependency>
+            <groupId>org.everit.json</groupId>
+            <artifactId>org.everit.json.schema</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+        <!-- Gson for JSON serialization -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
         </dependency>
+        <!-- Jackson for JSON processing -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
