--- a/io-programming-practice/gcr-codebase/json-data/pom.xml
+++ b/io-programming-practice/gcr-codebase/json-data/pom.xml
@@ -35,5 +35,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.17.1</version>
         </dependency>
+        <!-- Open CSV processing -->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.7.1</version>
+        </dependency>
     </dependencies>
 </project>
