--- a/sonarqube-practice/AddressBook/pom.xml
+++ b/sonarqube-practice/AddressBook/pom.xml
@@ -6,15 +6,25 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.lakshya</groupId>
-    <artifactId>addressbook</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
+    <!-- 🔴 CHANGED: artifactId -->
+    <artifactId>addressbook-app</artifactId>
+
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <!-- ===== Properties ===== -->
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <!-- Java -->
+        <maven.compiler.release>17</maven.compiler.release>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- SonarQube -->
         <sonar.host.url>http://localhost:9000</sonar.host.url>
+        <sonar.projectName>AddressBook</sonar.projectName>
     </properties>
 
+    <!-- ===== Dependencies ===== -->
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -24,18 +34,32 @@
         </dependency>
     </dependencies>
 
+    <!-- ===== Build ===== -->
     <build>
         <plugins>
+
+            <!-- Compiler -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+            </plugin>
+
+            <!-- Tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
             </plugin>
+
+            <!-- Sonar Scanner -->
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.10.0.2594</version>
             </plugin>
+
         </plugins>
     </build>
+
 </project>
